--- a/footvibe/template/admin_temp/product_control/edit_product_variant.html
+++ b/footvibe/template/admin_temp/product_control/edit_product_variant.html
@@ -32,12 +32,11 @@
                     <h4>Product Details</h4>
                 </div>
                 <div class="card-body">
-                    <form method="post" enctype="multipart/form-data">
+                    <form action="{% url "product_mng:product_variant_update" product_variant_slug=product_variant.product_variant_slug  %}" method="POST"  enctype="multipart/form-data">
                         {% csrf_token %}
                         <input type="hidden" name="product" value="{{ product_variant.product.id }}">
                         <div class="row">
                             <div class="col-lg-6">
-
                                 <div class="mb-4">
                                     <label for="{{form.product_name.id_for_label}}" class="form-label">Product name</label>
                                     <input value="{{product_variant.product.get_product_name}}" type="text" class="form-control" readonly>                   
@@ -45,9 +44,8 @@
 
                                 <div class="mb-4">
                                     <label for="{{ form.sku_id.id_for_label }}" class="form-label">SKU ID</label>
-                                    <input type="text" class="form-control" name="{{ form.sku_id.name }}" value="{{ form.sku_id.value }}" readonly>
+                                    {{ form.sku_id }}
                                 </div>
-                                
                             </div>
                         </div>
 
@@ -56,7 +54,7 @@
                             <div class="mb-4">
                                 <label for="attributes_{{ forloop.counter }}" class="form-label">{{ attribute_name }}</label>
                                 <select class="form-select" name="attributes_{{ forloop.counter }}">
-                                    <option value="None">---------</option>
+                                   
                                     {% for attribute_value in attribute_values %}
                                         <option value="{{ attribute_value.id }}" {% if attribute_value.id in selected_attribute_values %}selected{% endif %}>
                                             {{ attribute_value.attribute_value }}
@@ -72,34 +70,40 @@
                         </div>
                         <div class="mb-4">
                             <label for="{{form.sale_price.id_for_label}}" class="form-label">Sale Price</label>
-                            <input value="{{ form.sale_price.value }}" placeholder="Type here" class="form-control" rows="4" name="sale_price">
+                            {{ form.sale_price }}
                         </div>
 
                         <div class="mb-4">
                             <label for="{{form.stock.id_for_label}}" class="form-label">Stock</label>
-                            <input value="{{ form.stock.value }}" placeholder="Type here" class="form-control" rows="4" name="stock">
+                            {{ form.stock }}
                         </div>
-
+                        <div>
+                            <label for="">Thumbnail</label> <br>
+                           {{form.thumbnail_image}}
+                        </div>
+                        <div class="mt-2">
+                            <label for="">Add additional images</label>
+                            <input class="form-control" multiple type="file" name="additional_images" accept=".jpg,.jpeg,.webp,.png">
+                        </div>
+                        <div class="card mb-4">
+                            <div class="mb-4">
+                                <button type="submit" class="btn btn-primary btn-sm rounded col-lg-12">Update Product Variant</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-
         </div>
         <div class="col-lg-4">
-
-           
-
-
             <div class="card mb-4">
                 <div class="card-header">
                     <h4>Thumbnail</h4>
                 </div>
                 <div class="card-body">
                     <div class="input-upload">
-                        <input class="form-control" type="file" name="thumbnail_image" accept=".jpg,.jpeg,.webp,.png">
                         {% if product_variant.thumbnail_image %}
                             <div class="existing-thumbnail">
-                                <img src="{{ product_variant.thumbnail_image.url }}" alt="Thumbnail" class="img-thumbnail" style="max-width: 200px; max-height: 200px;">
-                                <button type="button" class="btn btn-sm btn-danger remove-thumbnail">Remove</button>
+                                <img id="existing-thumbnail" src="{{ product_variant.thumbnail_image.url }}" alt="Thumbnail" class="img-thumbnail" style="max-width: 200px; max-height: 200px;">
                             </div>
                         {% endif %}
                     </div>
@@ -111,108 +115,28 @@
                     <h4>Additional images</h4>
                 </div>
                 <div class="card-body">
-                    <div class="input-upload">
-                        <input class="form-control" multiple type="file" name="additional_images" accept=".jpg,.jpeg,.webp,.png">
-                    </div>
-            
+
                     <!-- Container for Additional Images with scrollbar -->
                     <div class="additional-images-container">
                         {% if current_additional_images %}
                             <h5>Current Additional Images</h5>
                             {% for image in current_additional_images %}
-                                <div class="existing-image">
+                                <div class="existing-image" data-image-id="{{ image.id }}">
                                     <img src="{{ image.image.url }}" alt="Additional Image" class="img-thumbnail" style="max-width: 100px; max-height: 100px;">
-                                    <button type="button" class="btn btn-sm btn-danger remove-additional-image" data-image-id="{{ image.id }}">Remove</button>
-                                </div>
+                                
+                                    <!-- Use an anchor tag for deletion and redirection -->
+                                    <a href="{% url 'product_mng:delete_product_variant_images' product_variant_slug=image.product_variant.product_variant_slug id=image.id %}">
+                                        <button type="submit" class="btn btn-sm btn-danger remove-additional-image" data-image-id="{{ image.id }}">Remove</button>
+                                    </a>
+                                </div>                         
                             {% endfor %}
                         {% endif %}
                     </div>
                 </div>
             </div>
-             
-
-            <div class=" card mb-4">
-                <div class="mb-4">
-                    <button type="submit" class="btn btn-primary btn-sm rounded col-lg-12">Update Product Variant</button>
-                </div>
-            </div>
-        </form>
         </div>
     </div>
 </section>
-
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-<script>
-    // Add this script to handle the remove thumbnail click
-    $(document).ready(function() {
-        // Handle remove thumbnail click
-        $('.remove-thumbnail').on('click', function() {
-            var confirmation = confirm('Are you sure you want to remove the thumbnail?');
-            if (confirmation) {
-                // Navigate to the container and remove only the image and related elements
-                var thumbnailContainer = $(this).closest('.existing-thumbnail');
-                thumbnailContainer.find('img').remove();
-                thumbnailContainer.find('button').remove();
-            }
-        });
-    });
-</script>
-
-
-<script>
-    $(document).ready(function() {
-        // Handle remove additional image click
-        $('.remove-additional-image').on('click', function() {
-            console.log('Remove additional image button clicked');
-            var confirmation = confirm('Are you sure you want to remove this additional image?');
-            if (confirmation) {
-                var imageId = $(this).data('image-id');
-                
-                // Construct the URL for the image removal endpoint
-                var productVariantSlug = "{{ product_variant.product_variant_slug }}";  // Assuming you have this variable available in your template
-                var removeImageUrl = 'edit-product-variant/' + product_variant_slug + '/' + imageId + '/';
-    
-                // Get the CSRF token from the cookie
-                var csrfToken = getCookie('csrftoken');
-    
-                // Make the AJAX request
-                $.ajax({
-                    url: removeImageUrl,
-                    type: 'POST',
-                    headers: { "X-CSRFToken": csrfToken },
-                    success: function(response) {
-                        console.log(response);
-                        console.log('Image removal successful:', response);
-                        // Remove the container for the removed image
-                        $(this).closest('.existing-image').remove();
-                    },
-                    error: function(error) {
-                        console.error(error);
-                    }
-                });
-            }
-        });
-    
-        // Function to get the CSRF token from the cookie
-        function getCookie(name) {
-            var cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                var cookies = document.cookie.split(';');
-                for (var i = 0; i < cookies.length; i++) {
-                    var cookie = cookies[i].trim();
-                    // Check if the cookie name matches
-                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
-                }
-            }
-            return cookieValue;
-        }
-    });
-</script>
-
 
 
 {% endblock %}
