--- a/footvibe/template/admin_temp/product_control/variant_list.html
+++ b/footvibe/template/admin_temp/product_control/variant_list.html
@@ -79,7 +79,11 @@
                                 <tbody>
                                     {% for product_variant in variants %}
                                     <tr>
+                                        {% if product_variant.thumbnail_image %}
                                         <td><img src="{{ product_variant.thumbnail_image.url }}" class="img-sm img-thumbnail" alt="Thumbnail image"></td>
+                                        {% else %}
+                                        <td><img src="" class="img-sm img-thumbnail" alt="Thumbnail image"></td>
+                                        {% endif %}
                                         <td><a href="#"> <h6 class="mb-0">{{ product_variant.get_product_name }}</h6></a></td>
                                         <td>{{product_variant.stock}}</td>
                                         <td class="text-end">
